size() and limit()
- Query Params and Route Params

--- a/NodeJS/Notes/15. Working with MongoDB.md
+++ b/NodeJS/Notes/15. Working with MongoDB.md
@@ -6,7 +6,21 @@
 
 ## Mongoose
 
-Most used to medium to connect with mongoDB
+**Mongoose *is* an ODM.** It's the tool that allows you to apply object-oriented principles to your database interactions, making your work with MongoDB much more structured, predictable, and powerful.
+
+> **ODM** stands for **Object-Document Mapper**.
+> 
+> It is a programming library that acts as a translator between a **document-oriented database** (like MongoDB) and an **object-oriented programming language** (like JavaScript).
+> 
+> The core philosophy of an ODM is to let you work with database records as if they were regular objects in your programming language. It handles the "mapping" between the two.
+> 
+> > **ORM (Object-Relational Mapper)**
+> > 
+> > An ORM acts as a translator between your object-oriented code (like JavaScript objects) and a **relational database** (like PostgreSQL, MySQL, or SQL Server).
+> > 
+> > **Prisma is a next-generation ORM (Object-Relational Mapper) and database toolkit.** It is not tied to a single database. It provides a consistent, type-safe layer to talk to many different databases
+
+ **Mongoose absolutely treats documents as instances of a Model.**  It *maps documents from the database to objects in your code*, making them much more powerful than plain JavaScript objects.
 
 ### Connecting with Database
 
@@ -14,39 +28,62 @@ Most used to medium to connect with mongoDB
 
 2. use `await mongoose.connect(uri)` 
    
-   1. > UTI will point to a cluster , to point a database append `/db_name` to the URI
+   1. > URI will point to a cluster , to point a database append `/db_name` to the URI
    
-   > `WARNING`
+   > **MongoDB Clusters**
    > 
-   > Try not to include symbols in password, These symbols manipulates logic of Encoding URI and DB wont be connected. 
+   > - MongoDB cluster is a **group of connected servers** (called "nodes") that work together to store your data. *Instead of relying on a single server, you distribute your database across multiple servers.*
    > 
-   > ### If you have to use symbols
+   > - A replica set is the most common type of cluster. **It's a group of servers that hold identical copies of your data.** It works like this
+   >   
+   >   - Primary Node: One server in the group is designated as the "primary." It's the *main server that receives all the data-writing operations* (like creating, updating, or deleting documents).
    > 
-   > A connection string is essentially a URI, and it follows the standard URI format:
+   > - Secondary Nodes: The other servers are "secondaries." *They constantly copy, or replicate, the data from the primary node. They can also handle read requests, which helps distribute the workload.*
+   >   
+   >   Clusters help in : 
+   >   
+   >   **High Availability (Fault Tolerance):** This is the main reason. If the primary server in the cluster crashes, goes offline for maintenance, or has a network issue, the replica set automatically holds an "election." One of the secondary nodes is promoted to become the new primary. This failover process happens in seconds, meaning your application can continue running with minimal or no downtime. A cluster eliminates a single point of failure.
    > 
-   > `protocol://<username>:<password>@<hostname>:<port>/<database>?<options>`
+   > - - **Data Redundancy and Protection** Because your data is copied across multiple servers (often in different physical locations), you are protected against data loss.
    > 
-   > Characters like `:`, `@`, `/`, and `?` are used as delimiters to separate the different parts of the string. When the driver sees one of these characters in your password, it can get confused and parse the string incorrectly.
+   > - - **Read Scalability:** For applications that have many more reads than writes (a very common scenario), *you can configure your application to send read requests to the secondary nodes*. This spreads the read workload across the cluster, *preventing the primary server from getting overloaded and improving overall performance.*
    > 
-   > The `@` symbol is the most common culprit because it's frequently used in email addresses, which people often use for passwords. However, other characters can also cause problems.
-   > 
-   > To fix this, you need to URL-encode the special characters in your password. The `@` character should be replaced with `%40`.
-   > 
-   > Here is a list of common characters that you should always percent-encode if they appear in your username or password:
-   > 
-   > | Character | Name          | Encoded Value |
-   > | --------- | ------------- | ------------- |
-   > | `@`       | At Symbol     | `%40`         |
-   > | `:`       | Colon         | `%3A`         |
-   > | `/`       | Forward Slash | `%2F`         |
-   > | `?`       | Question Mark | `%3F`         |
-   > | `#`       | Hash / Pound  | `%23`         |
-   > | `[`       | Left Bracket  | `%5B`         |
-   > | `]`       | Right Bracket | `%5D`         |
-   > | `&`       | Ampersand     | `%26`         |
-   > | `=`       | Equals Sign   | `%3D`         |
-   > | `+`       | Plus Sign     | `%2B`         |
-   > |           | Space         | `%20`         |
+   > - **Disaster Recovery:**  If a natural disaster (like a fire or flood) takes out an entire data center, the nodes in other locations will still be running, and your application will remain available.
+
+> - Clusters help in :
+> 1. 
+
+> `WARNING`
+> 
+> Try not to include symbols in password, These symbols manipulates logic of Encoding URI and DB wont be connected. 
+> 
+> ### If you have to use symbols
+> 
+> A connection string is essentially a URI, and it follows the standard URI format:
+> 
+> `protocol://<username>:<password>@<hostname>:<port>/<database>?<options>`
+> 
+> Characters like `:`, `@`, `/`, and `?` are used as delimiters to separate the different parts of the string. When the driver sees one of these characters in your password, it can get confused and parse the string incorrectly.
+> 
+> The `@` symbol is the most common culprit because it's frequently used in email addresses, which people often use for passwords. However, other characters can also cause problems.
+> 
+> To fix this, you need to URL-encode the special characters in your password. The `@` character should be replaced with `%40`.
+> 
+> Here is a list of common characters that you should always percent-encode if they appear in your username or password:
+> 
+> | Character | Name          | Encoded Value |
+> | --------- | ------------- | ------------- |
+> | `@`       | At Symbol     | `%40`         |
+> | `:`       | Colon         | `%3A`         |
+> | `/`       | Forward Slash | `%2F`         |
+> | `?`       | Question Mark | `%3F`         |
+> | `#`       | Hash / Pound  | `%23`         |
+> | `[`       | Left Bracket  | `%5B`         |
+> | `]`       | Right Bracket | `%5D`         |
+> | `&`       | Ampersand     | `%26`         |
+> | `=`       | Equals Sign   | `%3D`         |
+> | `+`       | Plus Sign     | `%2B`         |
+> |           | Space         | `%20`         |
 
 3. this async function returns a promise , use .`then()` and `.catch()` 
 
@@ -102,7 +139,9 @@ connectDB()
 
 2. For every collection , create `JS` file.
 
-3. use `const userSchema = new mongooe.schema()` to create the schema
+3. use `const userSchema = new mongooe.Schema()` to create the schema
+   
+   1. S is capital in Schema since it's a Class. A **Mongoose Schema** is the **blueprint** for your data. It's a JavaScript object that defines the structure of documents within a MongoDB collection.
 
 4. this takes an object make sure *keys are camelCase* with no underscores
 
@@ -111,6 +150,12 @@ connectDB()
    1. This object will contain a property of `type` which stores the data type of the property.
 
 6. Now use `const Model = mongoose.model("name", schema)` to create a model 
+   
+   1. Always Start Model name with Capital Letter 
+   2. model is a method hence lowercase. 
+   3. A **Mongoose Model** is the **tool** you use to interact with the database.
+   4. it's a constructor function compiled from a Schema. The Model takes your blueprint (the Schema) and connects it to a specific MongoDB collection.
+   5.  It provides the interface for creating, querying, updating, and deleting documents.
 
 7. Export this model
 
@@ -298,6 +343,16 @@ app.get("/getUser", async (req,res)=>{
     }
 })
 ```
+
+### Limiting the Results
+
+This is known as Pagination, we use query params in the route this will pass the page number according to which we skip the documents
+
+Form mongoose we use the methods `.skip()` and `.limit()` to get the right no. of results.
+
+> `NOTE`
+> 
+> Always Sanitize the limit value if from the user Input a large number could consumes a long time to retrieve all the docs within the limit. Attackers use this to hang the DB server
 
 ## Deleting form the Model
 
