--- a/NodeJS/Notes/16. Schema and API  Validation.md
+++ b/NodeJS/Notes/16. Schema and API  Validation.md
@@ -30,6 +30,7 @@ You can configure the error message for individual validators in your schema. Th
 
 - Array syntax: `min: [6, 'Must be at least 6, got {VALUE}']`
 - Object syntax: `enum: { values: ['Coffee', 'Tea'], message: '{VALUE} is not supported' }`
+  - The main placeholder you need here is `{VALUE}`, which Mongoose replaces with the value that was provided for the field.
 
 ### Custom Schema Validators
 
@@ -55,6 +56,14 @@ To enable validation during the update of an document add the property `runValid
 Model.findOneAndUpdate({filter}, {updates}, {runValidators:true})
 ```
 
+## Pre Schema Validation
+
+use `SchemaName.pre("save", function)` this function executes after every `.save()` is performed.  use this to validate before saving documnent to DB.
+
+>  `NOTE`
+> 
+> The function shouldn't be arrow function. If comparing `_id` use `_id.equals(other_id)`
+
 # API Validation
 
 Validate API to ensure user are restricted from performing  restricted operations.
@@ -62,6 +71,8 @@ Validate API to ensure user are restricted from performing  restricted operation
 We do this by ensuring `request` body has only those fields which are not restricted.
 
 > NEVER TRUST `req.body` always validate it and perform the tasks
+
+> Think about every corner case of API usage and add validation to it. 
 
 ```js
 app.patch("/updateUser", async (req,res)=>{
@@ -94,6 +105,21 @@ the problem is we can't allow to edit id but we need it to get the document , he
 > Why to validate at route, we already validate forms in the UI?
 > 
 > Attackers use API routes to breach into server rather than UI forms hence it better to validate both places (Routes ad Forms)
+
+
+
+> `NOTE`
+> 
+> Always send responses in same format so that Frontend devs better handle them in consistent way.
+> 
+> Example return a JSON using `res.json`
+> 
+> ```js
+> res.status().json({
+>     "message":"About Response",
+>     "data": data_to_send
+> })
+> ```
 
 ### Validating `req.body`
 
@@ -154,6 +180,8 @@ use `bcrypt.hash(password,10)` to hash the password and store this in the DB
   const hashed_password = await bcrypt.hash(validated_details.password,10);
     validated_details.password = hashed_password
 ```
+
+> 12 rounds is the recommended minimum for production use. More rounds increase security but also processing time. Choose based on your security requirements.
 
 ### Checking the Password for Login
 
