--- a/NodeJS/Notes/18. Express Router.md
+++ b/NodeJS/Notes/18. Express Router.md
@@ -8,8 +8,6 @@ Router helps to group APIs
 > 
 > For example `auth/signup` , `auth/login` name the router as `auth` (group them)
 
-
-
 ## Creating the Routers
 
 1. Create a folder `src/routes`
@@ -30,8 +28,6 @@ Router helps to group APIs
    module.exports=routerName
    ```
 
-
-
 ## Linking Routers to the Server
 
 1. Require  the router in Server Entry.
@@ -45,4 +41,33 @@ const routerName= require("./routes/routerName")
 app.use("/", routerName)
 ```
 
+## Route Parameters and Query String
 
+## Route Parameters
+
+1.  route parameters as **required placeholders** for identifying a **specific resource**. They are part of the URL path itself.
+
+2. define them in your route path using a colon (`:`).
+   
+   - `router.get('/users/:userId')`
+
+3. **Access in Code**: Express puts the captured value into the `req.params` object.
+   
+   - For the URL above, `req.params.userId` would be the string `'12345'`.
+
+### Query String / Parameters
+
+1. query parameters as **optional filters, sorters, or options** for a list of resources. They are not part of the main URL path; they come at the end after a `?`.
+
+2. The query string starts with a `?`. Each parameter is a `key=value` pair, and multiple parameters are separated by `&`.
+   
+   - `http://example.com/products?category=electronics&sort=price_desc`
+   - > `NOTE`
+     > 
+     > *The route definition should just be `"/feed"`, not `"/feed/?page=page"`. Express handles the query string part automatically)*
+     > 
+     > Don't add the query string from the route definition. Express will automatically parse any query parameters from the incoming URL and make them available to you in the `req.query` object.
+
+3. **Access in Code**: Express parses the query string into the `req.query` object.
+   
+   - For the URL above, `req.query` would be `{ category: 'electronics', sort: 'price_desc' }`.
