--- a/NodeJS/Notes/15. Working with MongoDB.md
+++ b/NodeJS/Notes/15. Working with MongoDB.md
@@ -236,6 +236,23 @@ We create a `POST` API which adds the `Document` to the Instance of the model cr
    1. `const model_instance = new Model(data)`
 
 4. Now use `await Model_instance.save()`  
+   
+   1. > ##### Object property Shorthand
+      > 
+      > With object property shorthand, if the variable name is the same as the object key you want, you can simply list the variable name once. JavaScript automatically understands that you want to create a key with that name and assign it the variable's value.
+      > 
+      > ```js
+      > const firstName = 'Jhon Doe';
+      > const role = 'Developer';
+      > 
+      > // No repetition! JavaScript understands this means { firstName: firstName, role: role }
+      > const user = {
+      >   firstName,
+      >   role
+      > };
+      > 
+      > console.log(user); // Outputs: { firstName: 'Jhon Doe', role: 'Developer' }
+      > ```
 
 5. Send a response
 
@@ -344,6 +361,30 @@ app.get("/getUser", async (req,res)=>{
 })
 ```
 
+>  **findOne()**
+> 
+> Declares the query a findOne operation. When executed, the first found document is passed to the callback.
+> 
+> The result of the query is a single document, or `null` if no document was found.
+> 
+> If a `findOne()` query matches multiple documents, MongoDB will return the **first document it finds in its natural order**.
+> 
+> > **Natural Order**
+> > 
+> >  The order in which MongoDB stores documents on disk.
+> > 
+> > While it often *corresponds to the insertion order*, you **cannot and should not rely on it**. Operations like updates that increase a document's size, or deletions and subsequent data reuse, *can change a document's physical location on disk, thus altering the "natural order."*
+> 
+> To get a predictable and deterministic result from a `findOne()` query that might match multiple documents, you **must** provide an explicit sort order using the `.sort()` method.
+> 
+> use `.sort()` with `findOne()` whenever there is a possibility of multiple documents matching your query and you need a specific one
+> 
+> ```js
+> const firstPost = await Post.findOne(
+> { field: 'value' }).sort({ field: 1 });
+> 1 -> Ascending , -1 -> Desecending
+> ```
+
 ### Limiting the Results
 
 This is known as Pagination, we use query params in the route this will pass the page number according to which we skip the documents
@@ -417,3 +458,40 @@ app.patch("/updateUser", async (req,res)=>{
     }
 })
 ```
+
+## Query Operators in MongoDB
+
+### Syntax
+
+| Syntax Structure                | Why it's structured this way                                                                                            |
+| ------------------------------- | ----------------------------------------------------------------------------------------------------------------------- |
+| `{ field: value }`              | **Simple Match:** The query is a document that looks just like the data you want to find.                               |
+| `{ field: { $op: value } }`     | **Complex Match:** The value of a field can be an "expression document" that specifies an operation (`$op`) to perform. |
+| `{ $op: [ {cond1}, {cond2} ] }` | **Logical Combination:** A logical operator (`$op`) takes an array of complete query documents as its value.            |
+
+| Operator                 | Syntax Example                                                        | Description                                                                                                                                                        |
+| ------------------------ | --------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| **Comparison Operators** | `{field :{$operator: required_value} }`                               |                                                                                                                                                                    |
+| `$eq`                    | `{ field: { $eq: value } }`                                           | Matches values that are equal to a specified value. (Note: `{ field: value }` is the common shorthand).                                                            |
+| `$ne`                    | `{ field: { $ne: value } }`                                           | Matches all values that are **not equal** to a specified value.                                                                                                    |
+| `$gt`                    | `{ price: { $gt: 10 } }`                                              | **Greater Than**. Matches values that are greater than a specified value.                                                                                          |
+| `$gte`                   | `{ price: { $gte: 10 } }`                                             | **Greater Than or Equal To**. Matches values that are greater than or equal to a specified value.                                                                  |
+| `$lt`                    | `{ price: { $lt: 20 } }`                                              | **Less Than**. Matches values that are less than a specified value.                                                                                                |
+| `$lte`                   | `{ price: { $lte: 20 } }`                                             | **Less Than or Equal To**. Matches values that are less than or equal to a specified value.                                                                        |
+| `$in`                    | `{ status: { $in: ['active', 'pending'] } }`                          | Matches any of the values specified in an array. Very useful for "OR" conditions on a single field.                                                                |
+| `$nin`                   | `{ status: { $nin: ['archived', 'deleted'] } }`                       | Matches none of the values specified in an array.                                                                                                                  |
+| **Logical Operators**    | `{$opearator : [{condition_1},...,{condition_2}]}`                    |                                                                                                                                                                    |
+| `$and`                   | `{ $and: [ { price: { $ne: 1.99 } }, { status: 'active' } ] }`        | Joins query clauses with a logical **AND**. (Note: Usually implicit, but useful for multiple conditions on the same field).                                        |
+| `$or`                    | `{ $or: [ { quantity: { $lt: 20 } }, { onSale: true } ] }`            | Joins query clauses with a logical **OR**. Each object in the array is a separate condition.                                                                       |
+| `$not`                   | `{ price: { $not: { $gt: 1.99 } } }`                                  | Inverts the effect of a query expression. Finds documents where the price is **not** greater than 1.99.                                                            |
+| **Element Operators**    | Same Syntax as Logical Operators                                      |                                                                                                                                                                    |
+| `$exists`                | `{ middleName: { $exists: true } }`                                   | Matches documents that have the specified field. Use `false` to find documents that do not have the field.                                                         |
+| `$type`                  | `{ value: { $type: 'string' } }`                                      | Selects documents where a field is of a specified BSON type (e.g., "string", "number", "array", "date").                                                           |
+| **Array Operators**      |                                                                       |                                                                                                                                                                    |
+| `$all`                   | `{ tags: { $all: ['mongodb', 'express'] } }`                          | Matches arrays that contain **all** specified elements, regardless of order.                                                                                       |
+| `$elemMatch`             | `{ scores: { $elemMatch: { student: 'Ali', score: { $gte: 85 } } } }` | Matches documents containing an *array of sub-documents* where at least **one** sub-document matches all the specified criteria.                                   |
+| `$size`                  | `{ tags: { $size: 3 } }`                                              | Selects documents if the array field has exactly the specified number of elements.                                                                                 |
+| **Evaluation Operators** |                                                                       |                                                                                                                                                                    |
+| `$regex`                 | `{ name: { $regex: '^Ahmad', $options: 'i' } }`                       | Selects documents where values match a specified regular expression. `$options: 'i'` makes it case-insensitive.                                                    |
+| `$text`                  | `{ $text: { $search: "web development" } }`                           | Performs a text search on fields that have a `text` index.                                                                                                         |
+| `$where`                 | `{ $where: "this.credits > this.debits" }`                            | **(Use with caution!)** Matches documents that satisfy a JavaScript expression. It is much slower than native operators and cannot use indexes. Avoid if possible. |
