--- a/NodeJS/Notes/16. Schema and API  Validation.md
+++ b/NodeJS/Notes/16. Schema and API  Validation.md
@@ -106,8 +106,6 @@ the problem is we can't allow to edit id but we need it to get the document , he
 > 
 > Attackers use API routes to breach into server rather than UI forms hence it better to validate both places (Routes ad Forms)
 
-
-
 > `NOTE`
 > 
 > Always send responses in same format so that Frontend devs better handle them in consistent way.
@@ -174,6 +172,40 @@ module.exports = {
 
 use `bcrypt` to hash the passwords and store them in DB
 
+> #### Hashing
+> 
+> *“Hashing” a password* refers to taking a plain text password and putting it through a hash algorithm.
+> 
+> The hash algorithm takes in a string of any size and outputs a fixed-length string. No matter the size of the original string (i.e., the plain text password), the output (the hash) is always the same length.
+> 
+> Hash is a fixed-length string of characters.
+> 
+> Since the same process is always applied, the same input always yields the same output.
+> 
+> > `WARNING`
+> > 
+> > Because hash algorithms always produce the same result for a specific password, they are predictable. If you only hash the password, a hacker can figure out the original password. Hashing is not enough. Hence We must also salt the password, and bcrypt requires you to do so. Random bytes get added to the password, and together the salted hash meets security recommendations on length and unpredictability.
+
+
+
+The hashing process needs to take a significant and tunable amount of time. This makes it extremely expensive and time-consuming for an attacker to try and guess millions or billions of passwords (a brute-force or dictionary attack).
+
+Thus , Bcrypt uses the Blowfish cypher, The module will use the value you enter and go through `2^rounds` hashing iterations. A cost factor of 12 results in 4096 rounds. buying us the enough time to prevent brute force.
+
+> **Salt**
+> 
+> In cryptography, a **salt** is a piece of random, unique data that is added to a password *before* it is hashed.
+> 
+> The primary reason for using a salt is to defeat **Rainbow Table Attacks**.
+> 
+> > **Rainbow Table Attacks**
+> > 
+> >  A *rainbow table attack* is *a cryptographic attack hackers use to break into systems by figuring out passwords from their hashes*
+> 
+> You add **salt** to a meal to change its flavor and make it unique.
+> 
+> In the same way, you add a cryptographic **salt** to a password to change its resulting hash and make it unique.
+
 use `bcrypt.hash(password,10)` to hash the password and store this in the DB
 
 ```js
@@ -181,7 +213,11 @@ use `bcrypt.hash(password,10)` to hash the password and store this in the DB
     validated_details.password = hashed_password
 ```
 
+> *You want to select a number that is high enough to prevent attacks, but not slower than potential user patience.*
+> 
 > 12 rounds is the recommended minimum for production use. More rounds increase security but also processing time. Choose based on your security requirements.
+> 
+> 
 
 ### Checking the Password for Login
 
