JS: every() and _id , __v

--- a/NodeJS/Notes/13 Builing Industry Grade Projects/4. Customizig Routes.md
+++ b/NodeJS/Notes/13 Builing Industry Grade Projects/4. Customizig Routes.md
@@ -18,6 +18,8 @@ To explicitly match a route for a required method call use `.<method_name>`
 
 ## Routing Expressions
 
+> The string patterns in Express 5 no longer work.
+
 1. `?` Optional : Matching will be the same if the segment is present or not.
    
    1. `/ab?c`  Matches both  `/abc` and `/ac`
@@ -59,8 +61,6 @@ use `req.query` to get all the query_parameters from the route_url
 ## Dynamic Routes
 
 use `"/:param"` to the route this match path, to get this params use `req.params`
-
-
 
 > `req.params`
 > 
