--- a/NodeJS/Notes/15. Working with MongoDB.md
+++ b/NodeJS/Notes/15. Working with MongoDB.md
@@ -221,6 +221,10 @@ module.exports = User;
 
 ## Writing Data into Collection with Routes
 
+> `NOTE`
+> 
+> Use await with DB operations and Always wrap them in `try-catch`
+
 We create a `POST` API which adds the `Document` to the Instance of the model created above section.(User)
 
 1. Create a new `POST` API with the required data \
@@ -256,15 +260,74 @@ We create a `POST` API which adds the `Document` to the Instance of the model cr
 
 5. Send a response
 
-> `_id` and `__v`
+> `_id` 
 > 
 > these fields are auto injected into a document by mongoDB to uniquely identify the document. *You can modify but don't do it*
 > 
-> `__v` are the version control of the document.
-
-> `NOTE`
+> By default, MongoDB creates an `_id` property on every document that's of type `ObjectId`
 > 
-> Use await with DB operations and Always wrap  them in  `try-catch`
+> The 12-byte `ObjectId` consists of:
+> 
+> - A **4-byte timestamp**, representing the ObjectId's creation, measured in seconds since the Unix epoch.
+> 
+> - A **5-byte random value generated once per client-side process**. This random value is unique to the machine and process. If the process restarts or the primary node of the process changes, this value is re-generated.
+> 
+> - A **3-byte incrementing counter per client-side process**, initialized to a random value. The counter resets when a process restarts.
+> 
+> > **`_id` consists of 24 Hexadecimal Characters**
+> > 
+> > A MongoDB `ObjectId` is fundamentally a **12-byte** binary value. Hexadecimal is just a common and efficient way to display that binary data as text.
+> > 
+> > In hexadecimal (base-16), every single byte (which can have 256 possible values, from 0 to 255) can be represented by exactly **two** characters (from `00` to `ff`). This is a very clean, direct mapping.
+> > 
+> > `ObjectId` is 12 bytes long, and each byte requires 2 hexadecimal characters to be represented:
+> > 
+> > **12 bytes × 2 hex characters/byte = 24 characters**
+> 
+> | Methods                                                                                                                                       | Description                                            |
+> | --------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------ |
+> | [`ObjectId.getTimestamp()`](https://www.mongodb.com/docs/manual/reference/method/ObjectId.getTimestamp/#mongodb-method-ObjectId.getTimestamp) | Returns the timestamp portion of the object as a Date. |
+> | [`ObjectId.toString()`](https://www.mongodb.com/docs/manual/reference/method/ObjectId.toString/#mongodb-method-ObjectId.toString)             | Returns the ObjectId as a hexadecimal string.          |
+> 
+> > **Comparing `_id`**
+> > 
+> > Mongoose documents and `ObjectId`s have a built-in `.equals()` method that correctly compares their underlying values.
+> > 
+> > ```js
+> > //  The Recommended Method
+> > console.log(objectId1.equals(objectId2)); //  TRUE
+> > 
+> > // It even works if you compare an ObjectId object 
+> > // to its string representation
+> > console.log(objectId1.equals('65f1b8e8a9b8c7d6e6f5a4b3')); 
+> > // TRUE
+> > 
+> > ```
+
+
+
+> `__v` 
+> 
+>  `__v`is a feature added specifically by **Mongoose**, It is called the **version key**
+> 
+> The `__v` field is Mongoose's internal mechanism for **Optimistic Concurrency Control**.
+> 
+> Its main job is to prevent a "race condition," which is *when two updates to the same document happen at the same time and one accidentally overwrites the other.*
+> 
+> It ensures that you can't save changes to an old version of a document, which protects data from being accidentally lost. (only change the most recent update of the document)
+> 
+> > **Disabling `__v`**
+> > 
+> > Add `versionKey: false` to the schema options to the Model. The Documents of this Model won't be having `__v`
+
+
+
+> The number of underscores is a visual cue:
+> 
+> - `_` : This is a special field managed by the MongoDB.(`_id`)
+> - `__`: This is an internal field managed by the Mongoose library, and you generally shouldn't touch it.(`__v`)
+
+
 
 ### Writing Dynamic(user_input) data to the Database
 
