--- a/NodeJS/Notes/16. Schema and API  Validation.md
+++ b/NodeJS/Notes/16. Schema and API  Validation.md
@@ -118,6 +118,10 @@ the problem is we can't allow to edit id but we need it to get the document , he
 >     "data": data_to_send
 > })
 > ```
+> 
+> **res.json()**
+> 
+> Sends a JSON response. This method sends a response (with the correct content-type) that is the parameter converted to a JSON string using`JSON.stringify()`
 
 ### Validating `req.body`
 
@@ -186,8 +190,6 @@ use `bcrypt` to hash the passwords and store them in DB
 > > 
 > > Because hash algorithms always produce the same result for a specific password, they are predictable. If you only hash the password, a hacker can figure out the original password. Hashing is not enough. Hence We must also salt the password, and bcrypt requires you to do so. Random bytes get added to the password, and together the salted hash meets security recommendations on length and unpredictability.
 
-
-
 The hashing process needs to take a significant and tunable amount of time. This makes it extremely expensive and time-consuming for an attacker to try and guess millions or billions of passwords (a brute-force or dictionary attack).
 
 Thus , Bcrypt uses the Blowfish cypher, The module will use the value you enter and go through `2^rounds` hashing iterations. A cost factor of 12 results in 4096 rounds. buying us the enough time to prevent brute force.
@@ -216,8 +218,6 @@ use `bcrypt.hash(password,10)` to hash the password and store this in the DB
 > *You want to select a number that is high enough to prevent attacks, but not slower than potential user patience.*
 > 
 > 12 rounds is the recommended minimum for production use. More rounds increase security but also processing time. Choose based on your security requirements.
-> 
-> 
 
 ### Checking the Password for Login
 
