--- a/NodeJS/Notes/18. Express Router.md
+++ b/NodeJS/Notes/18. Express Router.md
@@ -1,5 +1,9 @@
 # Express Router
 
+*Routing* refers to how an application’s endpoints (URIs) respond to client requests.
+
+A `Router` instance is a complete middleware and routing system; for this reason, it is often referred to as a “mini-app”.
+
 Router helps to group APIs
 
 > `TIP`
@@ -14,9 +18,9 @@ Router helps to group APIs
 
 2. Create a file for dedicated router (`auth.js`)
 
-3. Create a Router by using `express.router` 
+3. Create a Router by using `express.Router` ,`express.Router` class to create modular, mountable route handlers 
    
-   1. `const authRouter = express.router()`
+   1. `const authRouter = express.Router()`
 
 4. To create Routes use the above router instead of `app`
 
@@ -71,3 +75,11 @@ app.use("/", routerName)
 3. **Access in Code**: Express parses the query string into the `req.query` object.
    
    - For the URL above, `req.query` would be `{ category: 'electronics', sort: 'price_desc' }`.
+
+## Router and Parameters
+
+But if the parent route `/birds` has path parameters, it will not be accessible by default from the sub-routes. To make it accessible, you will need to pass the `mergeParams` option to the Router constructor.
+
+```js
+const router = express.Router({ mergeParams: true })
+```
